--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,8 +10,10 @@ html {
   font-size: 16px;
   box-sizing: border-box;
   height: 100%;
+  width: 100%;
   font-family: sans-serif;
   color: #FFF;
+  overflow-y: hidden;
 }
 
 body {
@@ -50,6 +52,18 @@ footer > a {
     content: "";
     clear: both;
     display: table;
+}
+
+@media (max-width: 626px) {
+  footer > a {
+    margin: 2rem;
+  }
+}
+
+@media (max-width: 540px) {
+  footer > a {
+    margin: 1rem;
+  }
 }
 
 /* === FLEXBOX === */
@@ -155,26 +169,6 @@ footer > a {
 /* === ABOUT KOANS === */
 
 #aboutKoans {
-  background-image: url('../img/bridge.jpg');
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  background-color: #464646;
-  height: 100%;
-}
-
-#footer-aboutKoans {
-  background-color: #603540;
-}
-
-#aboutKoans a {
-  color: #FFF;
-}
-
-/* === TODAY'S KOAN === */
-
-#today {
   background-image: url('../img/sea.jpg');
   background-position: center center;
   background-repeat: no-repeat;
@@ -182,6 +176,43 @@ footer > a {
   background-size: cover;
   background-color: #464646;
   height: 100%;
+  color: #FFF;
+}
+
+#footer-aboutKoans {
+  background-color: #315561;
+}
+
+#aboutKoans a {
+  color: #FFF;
+}
+
+#aboutKoans p {
+  line-height: 1.4rem;
+  font-weight: bolder;
+}
+
+@media (max-width: 550px) {
+  #aboutKoans p {
+    font-size: .9rem;
+  }
+}
+
+/* === TODAY'S KOAN === */
+
+#today {
+  color: #000;
+  background-image: url('../img/mountain.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+#today p {
+  font-size: 2.2rem;
+  font-style: italic;
+  font-weight: bolder;
 }
 
 #footer-today {
@@ -203,6 +234,11 @@ footer > a {
   background-color: #464646;
   height: 100%;
   color: #000;
+}
+
+#about p {
+  font-size: 2rem;
+  font-weight: bold;
 }
 
 #footer-about {
