--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,9 +3,10 @@
 
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 		<title>Koanify - A Koan for every Day</title>
 		<link rel="stylesheet" type="text/css" href="./css/styles.css">
-		<link rel="icon" type="image/png" href="./img/taoismus.png">
+		<link rel="icon" type="image/png" href="../public/img/taoismus.png">
 	</head>
 
 	<body id="start">
